--- a/EddySapClone/app/src/main/res/values/strings.xml
+++ b/EddySapClone/app/src/main/res/values/strings.xml
@@ -7,4 +7,18 @@
     <string name="more">More</string>
     <string name="floating_bar">floating for layouts</string>
     <string name="status">Tap to add status update</string>
+    <string name="welco_text">Welcome to EddySap a clone!</string>
+    <string name="terms_of_service">Read our Privacy policy. Tap Agree and accept our terms of service</string>
+    <string name="_256">256</string>
+    <string name="sms_charges">Carrier sms charges may apply.</string>
+    <string name="enter_phone">Enter Your Phone Number</string>
+    <string name="eddysap_will_send_an_sms_massage_to_verify_your_number_what_s_my_phone_number">EddySap will send an SMS massage to verify your number.What\'s my phone number?</string>
+    <string name="plus">+</string>
+    <string name="number_p">phone number</string>
+    <string name="next">next</string>
+    <string name="from">From</string>
+    <string name="name">Name</string>
+    <string name="dete">17/05/2022</string>
+    <string name="description">Description</string>
+    <string name="my_status">My Status</string>
 </resources>
