--- a/EddySapClone/app/src/main/res/values/strings.xml
+++ b/EddySapClone/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="profile_info">Profile info</string>
     <string name="words">Please provide your name and an optional profile photo</string>
     <string name="type_your_name_here">Type your name here</string>
+    <string name="notifications_setting"><![CDATA[Massage,group & call tons]]></string>
 </resources>
