--- a/EddySapClone/app/src/main/res/values/strings.xml
+++ b/EddySapClone/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="type_your_name_here">Type your name here</string>
     <string name="notifications_setting"><![CDATA[Massage,group & call tones]]></string>
     <string name="using_eddy_sap">Hey there! i am using EddySap.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
