--- a/EddySapClone/app/src/main/res/values/strings.xml
+++ b/EddySapClone/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <string name="name">Name</string>
     <string name="dete">17/05/2022</string>
     <string name="description">Description</string>
-    <string name="my_status">My Status</string>
     <string name="enter_code">Enter code here</string>
     <string name="agree_and_continue">Agree and continue.</string>
     <string name="date">12/06/2022 09:34pm</string>
@@ -30,6 +29,7 @@
     <string name="type_your_name_here">Type your name here</string>
     <string name="notifications_setting"><![CDATA[Massage,group & call tones]]></string>
     <string name="using_eddy_sap">Hey there! i am using EddySap.</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_caption">Add a caption</string>
+    <string name="my_status">My Status</string>
+    <string name="_10_minutes_ago">10 minutes ago</string>
 </resources>
